@@ -220,6 +220,8 @@ class Base(object, consts.Constants, preferences.Preferences):
         self.trayimage = None
         self.updating_edit_entries = None
 
+        self.library_view_caches_reset()
+
         # Initialize vars (these can be needed if we have a cli argument, e.g., "sonata play")
         socketsettimeout(5)
         self.profile_num = 0
@@ -565,6 +567,7 @@ class Base(object, consts.Constants, preferences.Preferences):
                 <menuitem action="filesystemview"/>
                 <menuitem action="artistview"/>
                 <menuitem action="genreview"/>
+                <menuitem action="albumview"/>
               </popup>
               <popup name="hidden">
                 <menuitem action="quitkey"/>
@@ -2041,6 +2044,14 @@ class Base(object, consts.Constants, preferences.Preferences):
                 else:
                     # Back up and try the parent
                     root = '/'.join(root.split('/')[:-1]) or '/'
+            elif self.lib_view == self.VIEW_ALBUM:
+                if self.lib_level == self.LIB_LEVEL_ALBUM:
+                    break
+                elif len(self.return_album_items(root)) == 0:
+                    # Back up and try the parent:
+                    self.lib_level -= 1
+                else:
+                    break
             elif self.lib_view == self.VIEW_ARTIST or self.lib_view == self.VIEW_GENRE:
                 if self.lib_level == self.LIB_LEVEL_GENRE:
                     break
@@ -2072,6 +2083,14 @@ class Base(object, consts.Constants, preferences.Preferences):
             lsinfo = mpdh.call(self.client, 'lsinfo', root)
             if lsinfo is None: lsinfo = []
         return lsinfo
+
+    def library_view_caches_reset(self):
+        # We should call this on first load and whenever mpd is
+        # updated.
+        self.lib_view_filesystem_cache = None
+        self.lib_view_artist_cache = None
+        self.lib_view_genre_cache = None
+        self.lib_view_album_cache = None
 
     def library_browse(self, widget=None, root='/'):
         # Populates the library list with entries starting at root
@@ -2138,39 +2157,70 @@ class Base(object, consts.Constants, preferences.Preferences):
             if self.wd != '/':
                 bd += [('0', [self.harddiskpb, '/', '/'])]
                 bd += [('1', [self.openpb, '..', '..'])]
-            for item in lsinfo:
-                if item.has_key('directory'):
-                    name = mpdh.get(item, 'directory').split('/')[-1]
-                    bd += [('d' + name.lower(), [self.openpb, mpdh.get(item, 'directory'), misc.escape_html(name)])]
-                elif item.has_key('file'):
-                    bd += [('f' + mpdh.get(item, 'file').lower(), [self.sonatapb, mpdh.get(item, 'file'), self.parse_formatting(self.libraryformat, item, True)])]
-            bd.sort(key=misc.first_of_2tuple)
-        elif self.lib_view == self.VIEW_ALBUM and self.lib_level == self.LIB_LEVEL_ALBUM:
-            self.lib_genre = ''
-            self.lib_artist = ''
-            self.lib_album = ''
-            # List all albums
-            albums, artists, dirs = self.return_albums()
-            for i in range(len(albums)):
-                bd += [(misc.lower_no_the(albums[i]), [self.albumpb, albums[i], misc.escape_html(albums[i] + " - " + artists[i])])]
-            bd.sort(key=misc.first_of_2tuple)
-        elif self.lib_view != self.VIEW_FILESYSTEM:
-            if self.lib_level == self.LIB_LEVEL_GENRE:
+            if self.wd == '/' and self.lib_view_filesystem_cache is not None:
+                # Use cache if possible...
+                bd = self.lib_view_filesystem_cache
+            else:
+                for item in lsinfo:
+                    if item.has_key('directory'):
+                        name = mpdh.get(item, 'directory').split('/')[-1]
+                        bd += [('d' + name.lower(), [self.openpb, mpdh.get(item, 'directory'), misc.escape_html(name)])]
+                    elif item.has_key('file'):
+                        bd += [('f' + mpdh.get(item, 'file').lower(), [self.sonatapb, mpdh.get(item, 'file'), self.parse_formatting(self.libraryformat, item, True)])]
+                bd.sort(key=misc.first_of_2tuple)
+                if self.wd == '/':
+                    self.lib_view_filesystem_cache = bd
+        elif self.lib_view == self.VIEW_ALBUM:
+            if self.lib_level == self.LIB_LEVEL_ALBUM:
+                # List all albums
                 self.lib_genre = ''
                 self.lib_artist = ''
                 self.lib_album = ''
-                untagged_tag = False
-                for genre in self.return_genres():
-                    playtime, num_songs = self.return_count('genre', genre)
-                    display = misc.escape_html(genre)
-                    display += self.add_display_info(num_songs, playtime)
-                    bd += [(misc.lower_no_the(genre), [self.genrepb, genre, display])]
-                    if genre.lower() == self.NOTAG.lower():
-                        untagged_tag = True
-                # Add Untagged item if it's not already there:
-                if not untagged_tag:
-                    bd += [(self.NOTAG.lower(), [self.genrepb, self.NOTAG, self.NOTAG])]
+                if self.lib_view_album_cache is not None:
+                    # Use cache if possible...
+                    bd = self.lib_view_album_cache
+                else:
+                    albums, artists, dirs = self.return_albums()
+                    for i in range(len(albums)):
+                        # NEEDTODO: This is way too slow, lets write something that adds
+                        # artwork to an existing treeview on the fly in another thread
+                        #coverfile = self.library_get_album_cover(dirs[i], artists[i], albums[i])
+                        playtime, num_songs = self.return_count('album', albums[i])
+                        display = misc.escape_html(albums[i]) + " <span weight='light'>(" + misc.escape_html(artists[i]) + ")</span>"
+                        display += self.add_display_info(num_songs, playtime)
+                        bd += [(misc.lower_no_the(albums[i]), [self.albumpb, albums[i], display])]
+                    bd.sort(key=misc.first_of_2tuple)
+                    self.lib_view_album_cache = bd
+            elif self.lib_level == self.LIB_LEVEL_SONG:
+                self.lib_album = self.wd
+                bd += [('0', [self.harddiskpb, '/', '/'])]
+                bd += [('1', [self.openpb, '..', '..'])]
+                for item in self.return_album_items(self.lib_album):
+                    num = mpdh.getnum(item, 'disc', '1', False, 2) + mpdh.getnum(item, 'track', '1', False, 2)
+                    bd += [('f' + num, [self.sonatapb, mpdh.get(item, 'file'), self.parse_formatting(self.libraryformat, item, True)])]
                 bd.sort(key=misc.first_of_2tuple)
+        elif self.lib_view != self.VIEW_FILESYSTEM:
+            if self.lib_level == self.LIB_LEVEL_GENRE:
+                # List all genres
+                self.lib_genre = ''
+                self.lib_artist = ''
+                self.lib_album = ''
+                if self.lib_view_genre_cache is not None:
+                    bd = self.lib_view_genre_cache
+                else:
+                    untagged_tag = False
+                    for genre in self.return_genres():
+                        playtime, num_songs = self.return_count('genre', genre)
+                        display = misc.escape_html(genre)
+                        display += self.add_display_info(num_songs, playtime)
+                        bd += [(misc.lower_no_the(genre), [self.genrepb, genre, display])]
+                        if genre.lower() == self.NOTAG.lower():
+                            untagged_tag = True
+                    # Add Untagged item if it's not already there:
+                    if not untagged_tag:
+                        bd += [(self.NOTAG.lower(), [self.genrepb, self.NOTAG, self.NOTAG])]
+                    bd.sort(key=misc.first_of_2tuple)
+                    self.lib_view_genre_cache = bd
             elif self.lib_level == self.LIB_LEVEL_ARTIST:
                 if self.lib_view == self.VIEW_GENRE:
                     bd += [('0', [self.harddiskpb, '/', '/'])]
@@ -2178,22 +2228,28 @@ class Base(object, consts.Constants, preferences.Preferences):
                 self.lib_artist = ''
                 self.lib_album = ''
                 self.lib_genre = self.wd
-                untagged_tag = False
-                for artist in self.return_artists():
-                    if self.lib_view == self.VIEW_GENRE:
-                        playtime, num_songs = self.return_count('genre', self.lib_genre, 'artist', artist)
-                    else:
-                        playtime, num_songs = self.return_count('artist', artist)
-                    display = misc.escape_html(artist)
-                    display += self.add_display_info(num_songs, playtime)
-                    bd += [(misc.lower_no_the(artist), [self.artistpb, artist, display])]
-                    if artist.lower() == self.NOTAG.lower():
-                        untagged_tag = True
-                if self.lib_view == self.VIEW_ARTIST:
-                    # Add Untagged item if it's not already there:
-                    if not untagged_tag:
-                        bd += [(self.NOTAG.lower(), [self.artistpb, self.NOTAG, self.NOTAG])]
-                bd.sort(key=misc.first_of_2tuple)
+                if self.lib_view == self.VIEW_ARTIST and self.lib_view_artist_cache is not None:
+                    # Use cache if possible...
+                    bd = self.lib_view_artist_cache
+                else:
+                    untagged_tag = False
+                    for artist in self.return_artists():
+                        if self.lib_view == self.VIEW_GENRE:
+                            playtime, num_songs = self.return_count('genre', self.lib_genre, 'artist', artist)
+                        else:
+                            playtime, num_songs = self.return_count('artist', artist)
+                        display = misc.escape_html(artist)
+                        display += self.add_display_info(num_songs, playtime)
+                        bd += [(misc.lower_no_the(artist), [self.artistpb, artist, display])]
+                        if artist.lower() == self.NOTAG.lower():
+                            untagged_tag = True
+                    if self.lib_view == self.VIEW_ARTIST:
+                        # Add Untagged item if it's not already there:
+                        if not untagged_tag:
+                            bd += [(self.NOTAG.lower(), [self.artistpb, self.NOTAG, self.NOTAG])]
+                    bd.sort(key=misc.first_of_2tuple)
+                    if self.lib_view == self.VIEW_ARTIST:
+                        self.lib_view_artist_cache = bd
             elif self.lib_level == self.LIB_LEVEL_ALBUM:
                 bd += [('0', [self.harddiskpb, '/', '/'])]
                 bd += [('1', [self.openpb, '..', '..'])]
@@ -2221,7 +2277,7 @@ class Base(object, consts.Constants, preferences.Preferences):
                         playtime, num_songs = self.return_count('artist', artists[i], 'album', albums[i])
                     display = misc.escape_html(albums[i])
                     if years[i] != '9999':
-                        display += ' (' + years[i] + ")"
+                        display += " <span weight='light'>(" + years[i] + ")</span>"
                     display += self.add_display_info(num_songs, playtime)
                     bd += [('d' + years[i] + misc.lower_no_the(albums[i]), [coverfile, years[i] + albums[i], display])]
                 for song in songs:
@@ -2278,7 +2334,8 @@ class Base(object, consts.Constants, preferences.Preferences):
         # Returns all genres in alphabetical order
         list = []
         for item in mpdh.call(self.client, 'list', 'genre'):
-            list.append(item)
+            if len(item) > 0:
+                list.append(item)
         (list, tmp, tmp2, tmp3) = misc.remove_list_duplicates(list, case=False)
         list.sort(locale.strcoll)
         return list
@@ -2314,13 +2371,39 @@ class Base(object, consts.Constants, preferences.Preferences):
         dirs = []
         for item in mpdh.call(self.client, 'listallinfo', '/'):
             if item.has_key('file') and item.has_key('album'):
-                albums.append(mpdh.get(item, 'album'))
-                if item.has_key('artist'):
-                    artists.append(mpdh.get(item, 'artist'))
-                else:
-                    artists.append("")
-                dirs.append(os.path.dirname(mpdh.get(item, 'file')))
+                album = mpdh.get(item, 'album')
+                if len(album) > 0:
+                    albums.append(album)
+                    if item.has_key('artist'):
+                        artists.append(mpdh.get(item, 'artist'))
+                    else:
+                        artists.append("")
+                    dirs.append(os.path.dirname(mpdh.get(item, 'file')))
         (albums, artists, dirs, tmp3) = misc.remove_list_duplicates(albums, artists, dirs, case=False)
+        # If an album has >= self.NUM_ARTISTS_FOR_VA artists, set just
+        # one album with Various Artists. Otherwise show multiple albums
+        # since it's certainly possible that multiple artists can have the
+        # same album name.
+        # NEEDTODO: Improve by using dirs too, similar to self.album_return_artist_name()
+        for i in range(len(albums)-1):
+            if i + self.NUM_ARTISTS_FOR_VA > len(albums)-1:
+                break
+            VA = False
+            for j in range(1, self.NUM_ARTISTS_FOR_VA + 1):
+                if albums[i].lower() != albums[i+j].lower():
+                    break
+                if j == self.NUM_ARTISTS_FOR_VA:
+                    VA = True
+            if VA == True:
+                artists[i] = _("Various Artists")
+                j = 1
+                while i+j <= len(albums)-1:
+                    if albums[i].lower() == albums[i+j].lower():
+                        albums.pop(i+j)
+                        artists.pop(i+j)
+                        dirs.pop(i+j)
+                    else:
+                        break
         return (albums, artists, dirs)
 
     def return_artists(self, use_genre_if_genre_view=True):
@@ -2334,21 +2417,26 @@ class Base(object, consts.Constants, preferences.Preferences):
                     if item.has_key('artist'):
                         # Make sure it's an exact match:
                         if self.lib_genre.lower() == mpdh.get(item, 'genre').lower():
-                            list.append(mpdh.get(item, 'artist'))
+                            artist = mpdh.get(item, 'artist')
+                            if len(artist) > 0:
+                                list.append(artist)
             else:
                 for item in mpdh.call(self.client, 'listallinfo', '/'):
                     if item.has_key('file') and item.has_key('artist'):
-                        if not item.has_key('genre'):
-                            list.append(mpdh.get(item, 'artist'))
-                        elif mpdh.get(item, 'genre') == self.NOTAG:
-                            list.append(mpdh.get(item, 'artist'))
+                        artist = mpdh.get(item, 'artist')
+                        if len(artist) > 0:
+                            if not item.has_key('genre'):
+                                list.append(artist)
+                            elif mpdh.get(item, 'genre') == self.NOTAG:
+                                list.append(artist)
             (list, tmp, tmp2, tmp3) = misc.remove_list_duplicates(list, case=False)
             list.sort(locale.strcoll)
             return list
         else:
             list = []
             for item in mpdh.call(self.client, 'list', 'artist'):
-                list.append(item)
+                if len(item) > 0:
+                    list.append(item)
             (list, tmp, tmp2, tmp3) = misc.remove_list_duplicates(list, case=False)
             list.sort(locale.strcoll)
             return list
@@ -2953,9 +3041,11 @@ class Base(object, consts.Constants, preferences.Preferences):
         elif value == "..":
             self.library_browse_parent(None)
         else:
-            if self.lib_view == self.VIEW_ARTIST or self.lib_view == self.VIEW_GENRE:
+            if self.lib_view != self.VIEW_FILESYSTEM:
                 if value == "/":
-                    if self.lib_view == self.VIEW_ARTIST:
+                    if self.lib_view == self.VIEW_ALBUM:
+                        self.lib_level = self.LIB_LEVEL_ALBUM
+                    elif self.lib_view == self.VIEW_ARTIST:
                         self.lib_level = self.LIB_LEVEL_ARTIST
                     elif self.lib_view == self.VIEW_GENRE:
                         self.lib_level = self.LIB_LEVEL_GENRE
@@ -2967,7 +3057,14 @@ class Base(object, consts.Constants, preferences.Preferences):
         if self.current_tab == self.TAB_LIBRARY:
             if not self.library_search_visible():
                 if self.library.is_focus():
-                    if self.lib_view == self.VIEW_ARTIST:
+                    if self.lib_view == self.VIEW_ALBUM:
+                        if self.lib_level > self.LIB_LEVEL_ALBUM:
+                            self.lib_level -= 1
+                        if self.lib_level == self.LIB_LEVEL_ALBUM:
+                            value = "/"
+                        else:
+                            value = self.lib_album
+                    elif self.lib_view == self.VIEW_ARTIST:
                         if self.lib_level > self.LIB_LEVEL_ARTIST:
                             self.lib_level -= 1
                         if self.lib_level == self.LIB_LEVEL_ARTIST:
@@ -3079,8 +3176,23 @@ class Base(object, consts.Constants, preferences.Preferences):
                                         items.append(mpdh.get(item, 'file'))
                         else:
                             items.append(model.get_value(model.get_iter(path), 1))
+        elif self.lib_view == self.VIEW_ALBUM:
+            for path in selected:
+                while gtk.events_pending():
+                    gtk.main_iteration()
+                if model.get_value(model.get_iter(path), 2) != "/" and model.get_value(model.get_iter(path), 2) != "..":
+                    if self.lib_level == self.LIB_LEVEL_ALBUM:
+                        for item in self.return_album_items(model.get_value(model.get_iter(path), 1)):
+                            items.append(mpdh.get(item, 'file'))
+                    else:
+                        if model.get_value(model.get_iter(path), 0) != self.sonatapb:
+                            (album, year) = self.library_album_and_year_from_path(model.get_value(model.get_iter(path), 1))
+                            for item in self.return_album_items_with_artist_and_year(self.lib_artist, album, year):
+                                items.append(mpdh.get(item, 'file'))
+                        else:
+                            items.append(model.get_value(model.get_iter(path), 1))
         elif self.lib_view == self.VIEW_ARTIST or (self.VIEW_GENRE and self.lib_level > self.LIB_LEVEL_GENRE):
-            # lib_level > 0 in genre view is equivalent to one of the
+            # lib_level > self.LIB_LEVEL_GENRE in genre view is equivalent to one of the
             # artist view levels:
             for path in selected:
                 while gtk.events_pending():
@@ -3361,6 +3473,7 @@ class Base(object, consts.Constants, preferences.Preferences):
             elif self.prevstatus == None or self.prevstatus.get('updating_db', 0) != self.status.get('updating_db', 0):
                 if not (self.status and self.status.get('updating_db', 0)):
                     # Update over:
+                    self.library_view_caches_reset()
                     self.update_statusbar(False)
                     # We need to make sure that we update the artist in case tags have changed:
                     self.album_reset_artist()
@@ -4922,7 +5035,7 @@ class Base(object, consts.Constants, preferences.Preferences):
                     if mpdh.get(self.songinfo, 'file') == mpdh.get(song, 'file'):
                         return_artist = mpdh.get(song, 'artist')
         (artists, tmp, tmp2, tmp3) = misc.remove_list_duplicates(artists, case=False)
-        if len(artists) > 3:
+        if len(artists) >= self.NUM_ARTISTS_FOR_VA:
             return_artist = _("Various Artists")
         self.album_current_artist = [self.songinfo, return_artist]
 
